dnl configure.in
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright (C) 1995 John W. Eaton
### 
### This file is part of Octave.
### 
### Octave is free software; you can redistribute it and/or modify it
### under the terms of the GNU General Public License as published by the
### Free Software Foundation; either version 2, or (at your option) any
### later version.
### 
### Octave is distributed in the hope that it will be useful, but WITHOUT
### ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
### FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
### for more details.
### 
### You should have received a copy of the GNU General Public License
### along with Octave; see the file COPYING.  If not, write to the Free
### Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

AC_REVISION()
AC_PREREQ(2.0)
AC_INIT(startup/octaverc)

AC_PROG_INSTALL

AC_OUTPUT(Makefile audio/Makefile control/Makefile elfun/Makefile
	  general/Makefile image/Makefile io/Makefile
	  linear-algebra/Makefile miscellaneous/Makefile plot/Makefile
	  polynomial/Makefile set/Makefile signal/Makefile
	  specfun/Makefile special-matrix/Makefile startup/Makefile
	  statistics/Makefile strings/Makefile time/Makefile)
