dnl configure.in
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright (C) 1996, 1997 John W. Eaton
### 
### This file is part of Octave.
### 
### Octave is free software; you can redistribute it and/or modify it
### under the terms of the GNU General Public License as published by the
### Free Software Foundation; either version 2, or (at your option) any
### later version.
### 
### Octave is distributed in the hope that it will be useful, but WITHOUT
### ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
### FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
### for more details.
### 
### You should have received a copy of the GNU General Public License
### along with Octave; see the file COPYING.  If not, write to the Free
### Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

AC_INIT
AC_REVISION()
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR([startup/octaverc])

AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile audio/Makefile control/Makefile \
	  control/base/Makefile control/hinf/Makefile \
	  control/obsolete/Makefile control/system/Makefile \
	  control/util/Makefile deprecated/Makefile elfun/Makefile \
	  finance/Makefile general/Makefile image/Makefile io/Makefile \
	  linear-algebra/Makefile miscellaneous/Makefile plot/Makefile \
	  polynomial/Makefile quaternion/Makefile set/Makefile \
	  signal/Makefile sparse/Makefile specfun/Makefile \
	  special-matrix/Makefile startup/Makefile statistics/Makefile \
	  statistics/base/Makefile statistics/distributions/Makefile \
	  statistics/models/Makefile statistics/tests/Makefile \
	  strings/Makefile time/Makefile])
AC_OUTPUT
