dnl configure.in
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright (C) 1995, 1996, 1997, 1998, 2000, 2002, 2005, 2006, 2007,
dnl               2008, 2009 John W. Eaton
### 
### This file is part of Octave.
### 
### Octave is free software; you can redistribute it and/or modify it
### under the terms of the GNU General Public License as published by the
### Free Software Foundation; either version 3 of the License, or (at
### your option) any later version.
### 
### Octave is distributed in the hope that it will be useful, but WITHOUT
### ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
### FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
### for more details.
### 
### You should have received a copy of the GNU General Public License
### along with Octave; see the file COPYING.  If not, see
### <http://www.gnu.org/licenses/>.

AC_INIT
AC_REVISION()
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR([startup/inputrc])

AC_PROG_INSTALL

AC_SUBST(ac_config_files)
AC_CONFIG_FILES([Makefile audio/Makefile deprecated/Makefile elfun/Makefile \
	  general/Makefile geometry/Makefile help/Makefile image/Makefile \
	  io/Makefile linear-algebra/Makefile miscellaneous/Makefile \
	  optimization/Makefile path/Makefile pkg/Makefile plot/Makefile \
	  polynomial/Makefile set/Makefile \
	  signal/Makefile sparse/Makefile specfun/Makefile \
	  special-matrix/Makefile startup/Makefile statistics/Makefile \
	  statistics/base/Makefile statistics/distributions/Makefile \
	  statistics/models/Makefile statistics/tests/Makefile \
	  strings/Makefile time/Makefile testfun/Makefile])
AC_OUTPUT
